--- a/ideas/map.html
+++ b/ideas/map.html
@@ -7,20 +7,18 @@
     </script>
     <script type="text/javascript">
         ymaps.ready(init);
-        var myMap,
-            myPlacemark;
 
         function init(){
-            myMap = new ymaps.Map("map", {
-                center: [52.286387, 104.280660],
-                zoom: 15
-            });
+			var myPlacemark,
+				myMap = new ymaps.Map("map", {
+					center: [52.286387, 104.280660],
+					zoom: 15
+				});
 
             myPlacemark = new ymaps.Placemark([52.286387, 104.280660], {
                 hintContent: 'Иркутск!',
                 balloonContent: 'Заебись'
             });
-
             myMap.geoObjects.add(myPlacemark);
 
 
@@ -28,31 +26,39 @@
 			// левой кнопкой мыши в любой точке карты.
 			// При возникновении такого события откроем балун.
 			myMap.events.add('click', function (e) {
-				myMap.geoObjects.removeAll()
+				var coords = e.get('coords');
 
-				var cords = e.get('coords');
-				newPlacemark = new ymaps.Placemark([cords[0].toPrecision(6), cords[1].toPrecision(6)], {
-					hintContent: 'Иркутск!',
-					balloonContent: 'Заебись'
-				});
-
-				myMap.geoObjects.add(newPlacemark);
-
-				/*if (!myMap.balloon.isOpen()) {
-					coords = e.get('coords');
-					myMap.balloon.open(coords, {
-						contentHeader:'Событие!',
-						contentBody:'<p>Кто-то щелкнул по карте.</p>' +
-							'<p>Координаты щелчка: ' + [
-							coords[0].toPrecision(6),
-							coords[1].toPrecision(6)
-							].join(', ') + '</p>',
-						contentFooter:'<sup>Щелкните еще раз</sup>'
+				// Если метка уже создана – просто передвигаем ее.
+				if (myPlacemark) {
+					myPlacemark.geometry.setCoordinates(coords);
+				}
+				// Если нет – создаем.
+				else {
+					myPlacemark = createPlacemark(coords);
+					myMap.geoObjects.add(myPlacemark);
+					// Слушаем событие окончания перетаскивания на метке.
+					myPlacemark.events.add('dragend', function () {
+						getAddress(myPlacemark.geometry.getCoordinates());
 					});
 				}
-				else {
-					myMap.balloon.close();
-				}*/
+       
+				myPlacemark.properties.set('iconCaption', 'поиск...');
+				ymaps.geocode(coords).then(function (res) {
+					var firstGeoObject = res.geoObjects.get(0);
+
+					myPlacemark.properties
+						.set({
+							// Формируем строку с данными об объекте.
+							iconCaption: [
+								// Название населенного пункта или вышестоящее административно-территориальное образование.
+								firstGeoObject.getLocalities().length ? firstGeoObject.getLocalities() : firstGeoObject.getAdministrativeAreas(),
+								// Получаем путь до топонима, если метод вернул null, запрашиваем наименование здания.
+								firstGeoObject.getThoroughfare() || firstGeoObject.getPremise()
+							].filter(Boolean).join(', '),
+							// В качестве контента балуна задаем строку с адресом объекта.
+							balloonContent: firstGeoObject.getAddressLine()
+						});
+				});
 			});
 
 			// Обработка события, возникающего при щелчке
@@ -68,7 +74,15 @@
 				myMap.hint.close();
 			});
 
-
+			// Создание метки.
+			function createPlacemark(coords) {
+				return new ymaps.Placemark(coords, {
+					iconCaption: 'поиск...'
+				}, {
+					preset: 'islands#violetDotIconWithCaption',
+					draggable: true
+				});
+			}
 		}
     </script>
 </head>
