--- a/ideas/map.html
+++ b/ideas/map.html
@@ -85,7 +85,10 @@
 								// Название населенного пункта или вышестоящее административно-территориальное образование.
 								firstGeoObject.getLocalities().length ? firstGeoObject.getLocalities() : firstGeoObject.getAdministrativeAreas(),
 								// Получаем путь до топонима, если метод вернул null, запрашиваем наименование здания.
-								firstGeoObject.getThoroughfare() || firstGeoObject.getPremise()
+								firstGeoObject.getThoroughfare() || firstGeoObject.getPremise(),
+								firstGeoObject.getPremiseNumber()
+								// В качестве контента балуна задаем строку с адресом объекта.
+								//firstGeoObject.getAddressLine()
 							].filter(Boolean).join(', '),
 							// В качестве контента балуна задаем строку с адресом объекта.
 							balloonContent: firstGeoObject.getAddressLine()
