--- a/ideas/map.html
+++ b/ideas/map.html
@@ -3,8 +3,11 @@
 <head>
     <title>Быстрый старт. Размещение интерактивной карты на странице</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
-    </script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"> </script>
+
+	<!-- Класс кнопки геолокации -->
+    <script src="geolocation-button.js" type="text/javascript"></script>
+
     <script type="text/javascript">
         ymaps.ready(init);
 
@@ -15,6 +18,21 @@
 					zoom: 15,
 					controls: ['zoomControl', 'fullscreenControl']
 				});
+
+			// Создание кнопки определения местоположения
+            var button = new GeolocationButton({
+                data : {
+                    image : 'wifi.png',
+                    title : 'Определить местоположение'
+                },
+                geolocationOptions: {
+                    enableHighAccuracy : true // Режим получения наиболее точных данных
+                }
+            }, {
+                // Зададим опции для кнопки.
+                selectOnClick: false
+            });
+            myMap.controls.add(button, { top : 5, left : 5 });
 
 			myPlacemark = createPlacemark([52.286387, 104.280660]);
 			myMap.geoObjects.add(myPlacemark);
