--- a/ideas/map.html
+++ b/ideas/map.html
@@ -4,6 +4,15 @@
     <title>Быстрый старт. Размещение интерактивной карты на странице</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"> </script>
+	<style>
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+
 
 	<!-- Класс кнопки геолокации -->
     <script src="geolocation-button.js" type="text/javascript"></script>
@@ -65,7 +74,7 @@
 						getAddress(myPlacemark.geometry.getCoordinates());
 					});
 				}
-       
+
 				getAddress(coords);
 			});
 
@@ -123,7 +132,7 @@
 </head>
 
 <body>
-    <div id="map" style="width: 600px; height: 400px"></div>
+    <div id="map"></div>
 </body>
 
 </html>
